fix: add text wrapping for funnel steps

--- a/frontend/src/scenes/funnels/FunnelBarVertical/FunnelBarVertical.scss
+++ b/frontend/src/scenes/funnels/FunnelBarVertical/FunnelBarVertical.scss
@@ -172,7 +172,6 @@
 
 .StepLegend {
     height: 100%;
-    white-space: nowrap;
     border-left: 1px solid var(--color-border-primary);
 
     > .LemonRow {
